[gd_scene load_steps=5 format=3 uid="uid://bybn6e8ggh00o"]

[ext_resource type="Script" uid="uid://dq28igni4l6u0" path="res://TimelineComponent/Scenes/Timeline/time_line.gd" id="1_vkty0"]
[ext_resource type="Script" uid="uid://7w8grgon3jya" path="res://TimelineComponent/Scenes/Timeline/beat_ticks.gd" id="2_1xed5"]
[ext_resource type="Texture2D" uid="uid://cyfil8yg51hra" path="res://icon.svg" id="2_gk61m"]
[ext_resource type="Script" uid="uid://cw4ldwcrwobik" path="res://TimelineComponent/Scenes/Timeline/scroll_container.gd" id="3_rnvyw"]

[node name="Timeline2D" type="Control"]
z_index = 3
z_as_relative = false
custom_minimum_size = Vector2(50, 100)
layout_mode = 3
anchors_preset = 0
offset_right = 50.0
offset_bottom = 100.0
script = ExtResource("1_vkty0")
backgroundColor = Color(0.0313726, 0.141176, 0.215686, 1)
wholeBeatTickColor = Color(1, 1, 1, 1)
halfBeatTickColor = Color(0.713726, 0, 0, 1)
quarterBeatTickColor = Color(0.2509804, 0.4509804, 0.7764706, 1)
eighthBeatTickColor = Color(0.7764706, 0.67058825, 0.2509804, 1)
sixteenthBeatTickColor = Color(0.4862745, 0.1764706, 0.7607843, 1)
bpm = 120.0
songLengthInSeconds = 180.0
tickHeight = 80.0
tickWidth = 2.0
snapDivisor = 4
hideScrollBar = true
lmbActionName = "LMB"
rmbActionName = "RMB"
noteTexture = ExtResource("2_gk61m")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
z_as_relative = false
clip_contents = false
custom_minimum_size = Vector2(50, 100)
layout_mode = 0
offset_right = 1356.0
offset_bottom = 100.0
horizontal_scroll_mode = 2
script = ExtResource("3_rnvyw")

[node name="BaseControl" type="ColorRect" parent="ScrollContainer"]
z_as_relative = false
custom_minimum_size = Vector2(45000, 100)
layout_mode = 2
mouse_filter = 2
color = Color(0.0313726, 0.141176, 0.215686, 1)

[node name="NoteContainer" type="Node2D" parent="ScrollContainer/BaseControl"]
z_index = 2
z_as_relative = false

[node name="BeatTicks" type="Node2D" parent="ScrollContainer/BaseControl"]
z_index = 1
script = ExtResource("2_1xed5")

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false

[connection signal="SNAP_DIVISOR_CHANGED" from="." to="ScrollContainer/BaseControl/BeatTicks" method="_on_timeline_2d_snap_divisor_changed"]
[connection signal="SCROLL_CHANGED" from="ScrollContainer" to="." method="_on_scroll_container_scroll_changed"]
